# forge

./: .env.example  .gitignore  .prettierignore  .prettierrc  .vercelignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  appwrite.config.json  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  vite.config.ts
.claude/: napkin.md
.serena/: project.yml
apps/cli/: README.md  (+2 more)
docs/: IDEAS.md  ROADMAP.md  product.md
migrations/: 20260720140338_initial-forge-schema.sql  20260720171911_webhook-inspector.sql  20260721005146_add-snippet-resource-metadata.sql  20260721120000_replace-snippets-with-resources.sql  20260721130000_uptime-monitor.sql  20260722133256_uptime-latency-charts.sql  20260722213508_add-slack-uptime-notifications.sql  20260723000000_add-uptime-monitor-request-headers.sql
specs/: 01-ai-content-generation.md  02-cli-forge-bookmarks.md  03-cli-forge-dev-board-tickets.md  04-dev-board-projects.md  05-cli-forge-dev-board-projects.md  06-edit-bookmarks-snippets-actions-menu.md  07-webhook-inspector.md  08-resources-configurations.md  09-uptime-monitor.md  10-latency-uptime-charts.md  11-uptime-slack-notifications.md  12-publish-forge-cli-npm.md  13-uptime-monitor-custom-headers.md
src/: App.tsx  index.css  main.tsx  routeTree.gen.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  tray.rs  window.rs
src-tauri/src/commands/: color.rs  git_add.rs  git_commit.rs  git_diff.rs  git_status.rs  git_unstage.rs  hash_file.rs  mod.rs  read_file.rs  tray_menu.rs
(+512 files in other folders)
